2.2.1 update